--- a/admin.html
+++ b/admin.html
@@ -68,7 +68,7 @@ padding:40px 20px
 
 .wrapper{
 width:100%;
-max-width:1200px
+max-width:1100px
 }
 
 .admin-card{
@@ -79,7 +79,22 @@ border-radius:20px;
 box-shadow:0 10px 30px rgba(0,0,0,.3)
 }
 
-h2{text-align:center;margin-bottom:25px}
+.dashboard-grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+gap:25px
+}
+
+.stat{
+background:rgba(255,255,255,.2);
+padding:35px;
+border-radius:18px;
+text-align:center;
+cursor:pointer;
+transition:.3s
+}
+
+.stat:hover{transform:translateY(-5px)}
 
 .controls{
 display:flex;
@@ -102,7 +117,7 @@ text-align:center
 }
 
 th,td{
-padding:12px;
+padding:14px;
 border-bottom:1px solid rgba(255,255,255,.2);
 text-align:center
 }
@@ -110,28 +125,31 @@ text-align:center
 .action-group{
 display:flex;
 justify-content:center;
-gap:8px
+gap:10px
 }
 
 .theme-btn{
-padding:6px 14px;
+padding:8px 18px;
 border-radius:25px;
 border:none;
 background:white;
 color:#0a5fd8;
 font-weight:600;
-cursor:pointer
+cursor:pointer;
+transition:.3s
 }
+
+.theme-btn:hover{transform:scale(1.05)}
 
 .danger-btn{background:#ff4d4d;color:white}
 .success-btn{background:#00b4ff;color:white}
 
 .edit-input{
-width:100%;
+padding:6px;
 border-radius:10px;
 border:none;
-padding:6px;
-text-align:center
+text-align:center;
+width:100%
 }
 
 .modal{
@@ -141,11 +159,10 @@ left:0;
 width:100%;
 height:100%;
 background:rgba(0,0,0,.5);
-display:flex;
+display:none;
 align-items:center;
 justify-content:center;
-z-index:2000;
-display:none
+z-index:2000
 }
 
 .modal-content{
@@ -175,6 +192,7 @@ margin-top:20px
 
 <div class="sidebar" id="sidebar">
 <button onclick="navigate('dashboard')">Dashboard</button>
+<button onclick="navigate('ordersSummary')">Orders</button>
 <button onclick="navigate('users')">Users</button>
 <button onclick="navigate('settings')">Settings</button>
 <button onclick="logout()">Logout</button>
@@ -186,15 +204,14 @@ margin-top:20px
 <div class="wrapper" id="contentArea"></div>
 </div>
 
-<!-- Delete Modal -->
 <div class="modal" id="deleteModal">
-  <div class="modal-content">
-    <h3>Delete this user?</h3>
-    <div class="modal-buttons">
-      <button class="theme-btn danger-btn" onclick="confirmDelete()">Delete</button>
-      <button class="theme-btn" onclick="closeModal()">Cancel</button>
-    </div>
-  </div>
+<div class="modal-content">
+<h3>Delete this user?</h3>
+<div class="modal-buttons">
+<button class="theme-btn danger-btn" onclick="confirmDelete()">Delete</button>
+<button class="theme-btn" onclick="closeModal()">Cancel</button>
+</div>
+</div>
 </div>
 
 <script src="js/firebase.js"></script>
@@ -204,27 +221,47 @@ let deleteUserId=null
 
 function toggleSidebar(){sidebar.classList.toggle("active");overlay.classList.toggle("active")}
 function closeSidebar(){sidebar.classList.remove("active");overlay.classList.remove("active")}
-function navigate(s){closeSidebar();if(s==="users")loadUsers();if(s==="settings")loadSettings();if(s==="dashboard")loadDashboard()}
+function navigate(s){closeSidebar();showSection(s)}
 
 firebase.auth().onAuthStateChanged(async user=>{
 if(!user)return location.href="login.html"
 const doc=await db.collection("users").doc(user.uid).get()
 if(doc.data()?.role!=="admin")return location.href="index.html"
-loadDashboard()
+showSection("dashboard")
 })
 
 function logout(){firebase.auth().signOut().then(()=>location.href="index.html")}
 
+function showSection(s){
+if(s==="dashboard")loadDashboard()
+if(s==="users")loadUsers()
+if(s==="activeOrders")loadActiveOrders()
+if(s==="ordersSummary")loadOrdersSummary()
+if(s==="settings")loadSettings()
+}
+
+/* DASHBOARD */
 async function loadDashboard(){
+const orders=await db.collection("orders").get()
 const users=await db.collection("users").get()
+const active=orders.docs.filter(d=>d.data().status!=="Delivered")
+
 contentArea.innerHTML=`
 <div class="admin-card">
-<h2>Dashboard</h2>
-<p>Total Users: ${users.size}</p>
+<div class="dashboard-grid">
+<div class="stat" onclick="navigate('users')">
+<h2>👥 ${users.size}</h2>
+<p>All Users</p>
+</div>
+<div class="stat" onclick="navigate('activeOrders')">
+<h2>📦 ${active.length}</h2>
+<p>Active Orders</p>
+</div>
+</div>
 </div>`
 }
 
-/* USERS */
+/* USERS WITH INLINE EDIT */
 async function loadUsers(){
 const snap=await db.collection("users").get()
 
@@ -282,11 +319,10 @@ row.style.display=row.innerText.toLowerCase().includes(val)?"":"none"
 }
 
 function filterUsers(){
-const role=document.getElementById("roleFilter").value
+const value=document.getElementById("roleFilter").value
 document.querySelectorAll("#usersTable tr").forEach((row,i)=>{
 if(i===0)return
-const r=row.children[3].innerText
-row.style.display=(role===""||r===role)?"":"none"
+row.style.display=value===""||row.children[3].innerText===value?"":"none"
 })
 }
 
@@ -299,9 +335,9 @@ const email=cells[2].innerText
 const role=cells[3].innerText
 
 row.innerHTML=`
-<td><input class="edit-input" value="${name}" id="name_${id}"></td>
-<td><input class="edit-input" value="${phone}" id="phone_${id}"></td>
-<td><input class="edit-input" value="${email}" id="email_${id}"></td>
+<td><input class="edit-input" id="name_${id}" value="${name}"></td>
+<td><input class="edit-input" id="phone_${id}" value="${phone}"></td>
+<td><input class="edit-input" id="email_${id}" value="${email}"></td>
 <td>
 <select id="role_${id}" class="edit-input">
 <option ${role==="admin"?"selected":""}>admin</option>
@@ -327,7 +363,6 @@ role:document.getElementById(`role_${id}`).value
 loadUsers()
 }
 
-/* DELETE */
 function openDelete(id){
 deleteUserId=id
 document.getElementById("deleteModal").style.display="flex"
@@ -339,21 +374,62 @@ deleteUserId=null
 }
 
 async function confirmDelete(){
-if(!deleteUserId)return
 await db.collection("users").doc(deleteUserId).delete()
 closeModal()
 loadUsers()
 }
 
-/* SETTINGS */
+/* ACTIVE ORDERS (unchanged logic) */
+async function loadActiveOrders(){
+const snap=await db.collection("orders").where("status","!=","Delivered").get()
+let rows=""
+for(const doc of snap.docs){
+const o=doc.data()
+const uDoc=await db.collection("users").doc(o.customerId).get()
+const u=uDoc.data()||{}
+rows+=`
+<tr>
+<td>${u.name||""}</td>
+<td>${u.phone||""}</td>
+<td>${o.bottles}</td>
+<td>₹${o.total}</td>
+<td>
+<button class="theme-btn success-btn" onclick="markDelivered('${doc.id}')">Mark Delivered</button>
+</td>
+</tr>`
+}
+contentArea.innerHTML=`
+<div class="admin-card">
+<h2>Active Orders</h2>
+<table>
+<tr>
+<th>Name</th>
+<th>Phone</th>
+<th>Bottles</th>
+<th>Total</th>
+<th>Action</th>
+</tr>
+${rows}
+</table>
+</div>`
+}
+
+async function markDelivered(id){
+await db.collection("orders").doc(id).update({status:"Delivered"})
+loadActiveOrders()
+}
+
+/* SETTINGS unchanged */
 async function loadSettings(){
 const doc=await db.collection("settings").doc("global").get()
 const price=doc.data()?.price||75
 contentArea.innerHTML=`
 <div class="admin-card">
 <h2>Settings</h2>
+<div class="controls">
 <input type="number" id="priceInput" value="${price}">
 <button class="theme-btn" onclick="savePrice()">Save</button>
+</div>
 </div>`
 }
 
