--- a/order.html
+++ b/order.html
@@ -5,31 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 
+  <!-- Font Awesome (same as index) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
   <style>
-    header{
-      justify-content:center;
-      flex-direction:column;
-      text-align:center;
-    }
-
-    nav{
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      width:100%;
-      gap:15px;
-      margin-top:15px;
-    }
-
-    nav button{
-      width:100%;
-      max-width:280px;
-    }
-
     .order-card{
       width:100%;
       max-width:420px;
@@ -60,15 +43,39 @@
       border-radius:10px;
       border:none;
     }
+
+    /* MOBILE ONLY HEADER FIX */
+    @media(max-width:768px){
+
+      header{
+        flex-direction:column;
+        align-items:center;
+        text-align:center;
+        gap:15px;
+      }
+
+      nav{
+        flex-direction:column;
+        align-items:center;
+        width:100%;
+      }
+
+      nav button{
+        width:100%;
+        max-width:280px;
+      }
+    }
   </style>
 </head>
 
 <body>
 
+<!-- SAME HEADER STRUCTURE AS INDEX -->
 <header>
   <img src="assets/logo.png" class="logo" />
+
   <nav>
-    <button onclick="window.location.href='order.html'">Order</button>
+    <button onclick="window.location.href='orders.html'">My Orders</button>
     <button onclick="window.location.href='index.html'">Home</button>
   </nav>
 </header>
@@ -95,7 +102,7 @@
 
 </main>
 
-<!-- SAME FOOTER AS INDEX -->
+<!-- EXACT SAME FOOTER AS INDEX -->
 <footer class="footer">
 <div class="footer-container">
 
@@ -129,7 +136,6 @@
 </p>
 </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js"></script>
 <script src="js/firebase.js"></script>
 
 <script>
