--- a/index.html
+++ b/index.html
@@ -330,10 +330,6 @@ mainActionBtn.textContent="Assigned Orders"
 mainActionBtn.onclick=()=>loadAssignedOrders(user.uid)
 ordersBtn.style.display="none"
 ordersBtn.onclick=()=>loadAssignedOrders(user.uid)
-document.getElementById("loginNavBtn").insertAdjacentHTML(
-"beforebegin",
-`<button id="homeNavBtn" onclick="location.href='index.html'">Home</button>`
-)
 
 }
 else{
@@ -428,8 +424,15 @@ Mark Delivered
 </tr>`
 }
 
-document.getElementById("mainContent").innerHTML=`
-<div style="width:100%;display:flex;justify-content:center;padding:40px 20px;">
+document.getElementById("mainContent").innerHTML = `
+<div style="display:flex;flex-direction:column;align-items:center;width:100%;padding:20px 20px 40px 20px;">
+
+<!-- HOME BUTTON -->
+<div style="width:100%;max-width:1100px;display:flex;justify-content:flex-end;margin-bottom:20px;">
+<button class="primary-btn" onclick="window.location.reload()">
+Home
+</button>
+</div>
 
 <div style="
 background:rgba(255,255,255,0.15);
@@ -439,9 +442,9 @@ border-radius:20px;
 width:100%;
 max-width:1100px;
 box-shadow:0 10px 35px rgba(0,0,0,0.3);
-position:relative;
 text-align:center;
 ">
+
 
 
 <h2 style="margin-bottom:25px;">Active Orders</h2>
